<resources>
    <string name="app_name">SLOWER THAN NOW</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="repeat">반복</string>
    <string name="setting">편집</string>
    <string name="pre_alarm">미리알림</string>
    <string name="alarm_bell">벨</string>
    <string name="alarm_vib">진동</string>
    <string name="alarm_before_1">1분 전</string>
    <string name="alarm_before_3">3분 전</string>
    <string name="alarm_before_5">5분 전</string>
    <string name="alarm_before_10">10분 전</string>
    <string name="alarm_before_30">30분 전</string>
    <string name="day_Mon">월요일</string>
    <string name="day_Tue">화요일</string>
    <string name="day_Wed">수요일</string>
    <string name="day_Thr">목요일</string>
    <string name="day_Fri">금요일</string>
    <string name="day_Sat">토요일</string>q
    <string name="day_Sun">일요일</string>
    <string name="week_day">주중</string>
    <string name="week_end">주말</string>
    <string name="time_to_sleep">· TIME TO SLEEP</string>
    <string name="how_long">· HOW LONG LEFT YOU CAN SNS</string>
    <string name="app_setting">APP SETTING</string>
    <string name="settings_safetylegal_activity_loading" >"로드 중"</string>
    <string name="menu_download" >다운로드</string>
    <string name="menu_all" >전체</string>
    <string name="ok">ok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appname_searchhint">search here</string>
    <string name="disallow_radio_on">ON</string>
    <string name="disallow_radio_off">OFF</string>
    <string name="disallow_radio">Mode</string>
    <string name="title_activity_app_package_list_view">App Select List View</string>
    <string name="client_app_title">AppSelect</string>


</resources>
