<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Startactivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/BackGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/back_top"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/back_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimary" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/textlight"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_top" />

        <ImageView
            android:id="@+id/back_bottom"
            android:layout_width="386dp"
            android:layout_height="467dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@color/colorPrimaryDark" />

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="320dp"
        android:layout_height="551dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/BOX_first"
                android:layout_width="match_parent"
                android:layout_height="198dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorAccent"
                android:fadingEdgeLength="12dp">

                <TextView
                    android:id="@+id/time_to_sleep"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/colorAccent"
                    android:text="@string/time_to_sleep"
                    android:textColor="@color/textdark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toTopOf="@+id/main_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/main_time"
                    android:layout_width="308dp"
                    android:layout_height="142dp"
                    android:background="@color/colorAccent"
                    android:text="@android:string/untitled"
                    android:textColor="@color/textdark"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/BOX_second"
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:layout_marginBottom="40dp"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/howlong"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/how_long"
                    android:textColor="@color/textdark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/D_HOUR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="93dp"
                    android:layout_marginStart="93dp"
                    android:layout_marginTop="8dp"
                    android:text="@android:string/untitled"
                    android:textColor="@color/textdark"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.83" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/BOX_third"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:background="@color/colorAccent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="108dp">

                <TextView
                    android:id="@+id/app_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_setting"
                    android:textColor="@color/textdark"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/underline_base"
                    android:layout_width="308dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/underline1"
                    android:layout_width="256dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/underline_base"
                    app:srcCompat="@color/underlinelight" />

                <ImageView
                    android:id="@+id/underline3"
                    android:layout_width="256dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/underline2"
                    app:srcCompat="@color/underlinelight" />

                <ImageView
                    android:id="@+id/underline"
                    android:layout_width="256dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/underline2"
                    app:srcCompat="@color/underlinelight" />

                <ImageView
                    android:id="@+id/underline2"
                    android:layout_width="256dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@string/setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/underline1"
                    app:srcCompat="@color/underlinelight" />

                <Button
                    android:id="@+id/btn_setting"
                    android:layout_width="57dp"
                    android:layout_height="26dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAccent"
                    android:text="@string/setting"
                    android:textColor="@color/textdark"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/app_setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/app_setting"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ico_instagram"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="76dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ico_instagram" />

                <ImageView
                    android:id="@+id/ico_kakao"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="104dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ico_kakao" />

                <ImageView
                    android:id="@+id/ico_facebook"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="44dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ico_facebook"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/ico_youtube"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="136dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ico_youtube" />

                <Switch
                    android:id="@+id/switch_instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/underline1" />

                <Switch
                    android:id="@+id/switch_kakao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/underline2" />

                <Switch
                    android:id="@+id/switch_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:checked="false"
                    android:splitTrack="false"
                    android:switchTextAppearance="@style/TextAppearance.AppCompat.Button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/underline_base" />

                <Switch
                    android:id="@+id/switch_youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="96dp"
                    android:checked="false"
                    android:splitTrack="false"
                    android:switchTextAppearance="@style/TextAppearance.AppCompat.Button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/underline_base" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>